--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,48 +10,42 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-  mvc:
-    hiddenmethod:
-      filter:
-        enabled: true
-  sql:
-    init:
-      mode: never
+  liquibase:
+    enabled: true
   jpa:
-    #    show-sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    show-sql: true
+    defer-datasource-initialization: false
     hibernate:
       ddl-auto: update
-    open-in-view: false
     properties:
       hibernate:
         format_sql: true
-    defer-datasource-initialization: true
 
-cloudinary:
-  api-key: ${CLAUDINARY_API_KEY:478985327646651}
-  api-secret: ${CLAUDINARY_API_SECRET:i3CwHZ9gUu8YYHzop8jqco6ErVY}
-  cloud-name: dlknl4mzd
 
-mail:
-  host: smtp.gmail.com
-  port: 587
-  username: aleksandramileva96@gmail.com
-  password: ${EMAIL_PASSWORD:keys jnos athx ocwl}
+#cloudinary:
+#  api-key: ${CLAUDINARY_API_KEY:478985327646651}
+#  api-secret: ${CLAUDINARY_API_SECRET:i3CwHZ9gUu8YYHzop8jqco6ErVY}
+#  cloud-name: dlknl4mzd
+#
+#mail:
+#  host: smtp.gmail.com
+#  port: 587
+#  username: aleksandramileva96@gmail.com
+#  password: ${EMAIL_PASSWORD:keys jnos athx ocwl}
+#
+#site:
+#  base:
+#    url: http://localhost:8080
+#
+#fortuneservice:
+#  base:
+#    url: http://${FORTUNES_SERVICE_HOST:localhost}:8081/fortune-service
+#
+#home-page-cron: "0 0 0,16 * * ?"
+#daily-report-cron: "0 0 0 * * ?"
+#daily-deletion-cron: "0 0/16 * * * ?"
 
-site:
-  base:
-    url: http://localhost:8080
-
-fortuneservice:
-  base:
-    url: http://${FORTUNES_SERVICE_HOST:localhost}:8081/fortune-service
-
-home-page-cron: "0 0 0,16 * * ?"
-daily-report-cron: "0 0 0 * * ?"
-daily-deletion-cron: "0 0/16 * * * ?"
-
-#logging:
-#  level:
-#    org.hibernate.SQL: DEBUG
-#    org.hibernate.orm.jdbc.bind: TRACE
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.orm.jdbc.bind: TRACE
