--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,22 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+  implementation 'com.cloudinary:cloudinary-http44:1.33.0'
+  implementation 'org.liquibase:liquibase-core'
+  implementation 'org.modelmapper:modelmapper:3.1.1'
+  implementation 'com.cloudinary:cloudinary-taglib:1.33.0'
+  implementation 'io.github.cdimascio:dotenv-java:2.3.1'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   runtimeOnly 'com.mysql:mysql-connector-j'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
   testImplementation 'org.springframework.security:spring-security-test'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+  testImplementation 'org.hsqldb:hsqldb:2.7.1'
+
 }
 
 tasks.named('test') {
   useJUnitPlatform()
 }
+
