--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ repositories {
 }
 
 dependencies {
+  compileOnly 'org.mapstruct:mapstruct:1.5.3.Final'
+  annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-jdbc'
   implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -28,9 +31,12 @@ dependencies {
   implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
   implementation 'com.cloudinary:cloudinary-http44:1.33.0'
   implementation 'org.liquibase:liquibase-core'
-  implementation 'org.modelmapper:modelmapper:3.1.1'
   implementation 'com.cloudinary:cloudinary-taglib:1.33.0'
   implementation 'io.github.cdimascio:dotenv-java:2.3.1'
+  implementation 'org.springframework.boot:spring-boot-starter-webflux'
+  implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   runtimeOnly 'com.mysql:mysql-connector-j'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -38,7 +44,6 @@ dependencies {
   testImplementation 'org.springframework.security:spring-security-test'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
   testImplementation 'org.hsqldb:hsqldb:2.7.1'
-
 }
 
 tasks.named('test') {
