combine all and search for cocktails, add cocktail

--- a/src/main/resources/db/changelog/db.changelog-2025-06-23-create-users.yaml
+++ b/src/main/resources/db/changelog/db.changelog-2025-06-23-create-users.yaml
@@ -39,7 +39,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: account_verified
-                  type: BOOLEAN
+                  type: BIT(1)
                   constraints:
                     nullable: false
               - column:
